--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta mame="them-color" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Tic Tac Toe is a game for two players who take turns marking the spaces in a three-by-three grid with X or O. The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row is the winner">
   <title>Tic Tak Toe Game</title>
+  
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="/icons/72.png">
+  <link rel="apple-touch-icon" href="/icons/96.png">
+  <link rel="apple-touch-icon" href="/icons/128.png">
+  <link rel="apple-touch-icon" href="/icons/144.png">
+  <link rel="apple-touch-icon" href="/icons/152.png">
+  <link rel="apple-touch-icon" href="/icons/192.png">
+  <link rel="apple-touch-icon" href="/icons/384.png">
+  <link rel="apple-touch-icon" href="/icons/512.png">
+  <meta name="apple-mobile-web-app-status-bar" content="#000000">
+
+
   <style>
     body{
       margin: 0;
